Prevent species title in heading from wrapping

--- a/src/css/cgps-mdl-theme.css
+++ b/src/css/cgps-mdl-theme.css
@@ -15,6 +15,10 @@
   padding-right: 16px;
 }
 
+.mdl-layout-title {
+  white-space: nowrap;
+}
+
 .mdl-layout__drawer-button {
   color: #673c90 !important;
   margin: 4px;
